  layers factored from base layers with the same names but in different modules
  would be considered equal by zope.testrunner.

- The factored ZTK layer cleanly shuts down the http server in tearDown now.
  This allows to run different selenium layers in one go.

- API expansion: add the assertions for ``getLocation``.


0.5 (2010-08-03)
----------------

- Add a static files test layer for running selenium tests against a set
  of static (HTML) files.
- Patterns now also work with multiline strings,
  i. e. 'foo*' will match 'foo\nbar' (#7790).


0.4.2 (2010-05-20)
------------------

- API expansion: ``*keyDown``, ``*keyUp``, ``keyPress``.


0.4.1 (2010-04-01)
------------------

- API expansion: added ``getSelectedLabel``.

- Ignore the code of a server's response when calling `open`. The default
  behaviour of SeleniumRC changed between 1.0.1 and 1.0.2 but we want the old
  behaviour by default.


0.4 (2010-03-30)
----------------

- API expansion: add ``getLocation`` to retrieve currently loaded URL in
  browser.

- API expansion: added ``waitForPopUp``, ``selectPopUp``, ``deselectPopUp``
  and ``close``.

- API expansion: added ``verifyAlertPresent``, ``verifyAlertNotPresent`` and
  ``waitForAlertPresent``.

- Usability: raise a better readable exception when an unimplemented selenese
  method is called.

- Usability: raise failure exceptions that convey the name of the failed
  assertion in spite of some lambdas wrapped around it.


0.3 (2010-01-12)
----------------

- Extracted 'host' and 'port' as class attributes of gocept.selenium.ztk.Layer
  so subclasses can override them; stopped hardcoding 8087 as the server port.


0.2.1 (2009-12-18)
------------------

- Fix incomplete sdist release on PyPI.


0.2 (2009-12-18)
----------------

- Make Zope 2 test server reachable from the outside.
- Implemented getTitle/assertTitle/waitForTitle/etc.


0.1 (2009-11-08)
----------------

- first release